# growbox

./: .pyproject.toml.swp  pyproject.toml
client/: package-lock.json  package.json
client/src/: App.tsx
server/: .env.swp
server/koelkast/: apps.py  models.py  serializers.py  tasks.py  views.py
server/koelkast/migrations/: 0001_initial_models.py  0002_add_celery.py  0003_output_task.py
server/main/: celery.py  settings.py  urls.py
